# WebShop

./: .env.template  Dockerfile
HotelFinder/: .env.template  main.py  readme.md  requirements.txt
HotelFinder/api/: __init__.py  city_request.py  hotels_request.py  request_details.py  request_to_api.py
HotelFinder/config_data/: config.py
HotelFinder/database/: database.db  models.py
HotelFinder/handlers/custom_handlers/: __init__.py  history.py  search_commands.py
HotelFinder/handlers/default_handlers/: echo.py  help.py
HotelFinder/keyboards/inline/: __init__.py  choice_yes_no.py  cities_list.py
HotelFinder/states/: __init__.py  info_for_request.py
HotelFinder/utils/misc/: __init__.py  check_date.py
M_19_prod/: Dockerfile  docker-compose.yaml  pyproject.toml
mysite/myauth/templates/myauth/: base.html
mysite/mysite/: settings.py  urls.py  views.py
mysite/mysite/templates/mysite/: base.html  main_page.html
